# loadmydata

./: .gitignore  .pre-commit-config.yaml  README.md  config.ini  pyproject.toml  requirements.txt  setup.cfg
.github/: keylabeler.yml  labeler.yml  semantic.yml
.github/workflows/: build-sdist  build-sdist.yml  check-linting.yml  create-release-and-publish.yml  create-release.yml  pr-labeler.yml  publish-to-pypi.yml
dataloader/: __init__.py  load_uea_ucr.py  utils.py
loadmydata/: __init__.py  config.py  load_uea_ucr.py  utils.py
notebooks/: human_locomotion.ipynb  ucr_ecg200.ipynb  ucr_syntheticcontrol.ipynb
src/loadmydata/: __init__.py  config.py  container.py  load_human_locomotion.py  load_molene_meteo.py  load_nyc_taxi.py  load_uea_ucr.py  padding.py  utils.py
