[tool.poetry]
name = "loadmydata"
version = "0.0.0"
description = "Collections of utility functions to download open-source data sets."
authors = ["Charles T. <charles@doffy.net>"]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.6"
pandas = "*"
tqdm = "*"
requests = "*"
yarl = "*"
sktime = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
