[metadata]
name = loadmydata
author = Charles T. 
author-email = charles@doffy.net
description = Collections of utility functions to download open-source data sets.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deepcharles/loadmydata
version = attr: loadmydata.__version__
license = BSD-2-Clause
license-file = LICENSE
project_urls =
    Bug Tracker = https://github.com/deepcharles/loadmydata/issues

[options]
zip_safe = true
python_requires = >= 3.6
setup_requires =
    setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
install_requires =
    pandas
    requests
    sktime
    tqdm
    yarl
packages = find:

