[metadata]
name = loadmydata
author = Charles T.
author-email = charles@doffy.net
description = Collections of utility functions to download open-source data sets.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deepcharles/loadmydata
version = attr: loadmydata.__version__
license = BSD-2-Clause
license-file = LICENSE
project_urls =
    Documentation = https://github.com/deepcharles/loadmydata/
    Source = https://github.com/deepcharles/loadmydata/
    Bug Tracker = https://github.com/deepcharles/loadmydata/issues

[options]
zip_safe = true
python_requires = >= 3.7
install_requires =
    numpy
    pandas
    requests
    scipy
    tqdm
    yarl
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
dev =
    pre-commit

